[package]
name = "pantograph"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = ["crossbeam-utils/std"]

[dependencies]
crossbeam-utils = { version = "0.8", default-features = false }

[lints]
workspace = true
